# cratedbx

./: .gitignore  Cargo.toml  README.md
lab/: data.py  load_data.py  pyproject.toml
lab/schemas/: schema_cratedb.sql  schema_mysql.sql  schema_pg.sql
src/: main.rs  metadata.rs  utils.rs
src/experiment/: data.rs  mod.rs  schema.rs  trans.rs
src/sink/: mod.rs
src/sink/cratedb/: driver.rs  mod.rs
src/source/: mod.rs  source.rs
src/source/mongodb/: driver.rs
src/source/mysql/: driver.rs
src/source/postgres/: driver.rs
