[package]
name = "cdctest"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
mongodb = "3.0.1"
serde = "1.0.204"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.10", features = ["array-impls"] }
chrono = "0.4.38"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
indexmap = "2.2.6"
log = "0.4.22"
serde_json = "1.0.120"
async-trait = "0.1.81"
