[package]
name = "cdctest"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
mongodb = "3.0.1"
serde = "1.0.204"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.10", features = ["array-impls"] }
chrono = "0.4.38"
sqlx = { version = "0.8.0", features = ["postgres", "mysql", "json", "bit-vec", "runtime-tokio", "ipnetwork", "time", "chrono"] }
indexmap = "2.2.6"
log = "0.4.22"
serde_json = "1.0.120"
async-trait = "0.1.81"
memory-stats = "1.2.0"
reqwest = { version = "0.12.5", features = ["json"] }
flamegraph = "0.6.5"
cargo-heaptrack = "0.1.0"
time = "0.3.36"

[dev-dependencies]
testcontainers = { version = "0.21.1", features = ["reqwest"] }
testcontainers-modules = { version = "0.9.0", features = ["postgres"] }
